# StickerRadar

./: .env.example  .gitignore  README.md  pyproject.toml  stickerradar.service.example
app/: __main__.py  auth.py  bot.py  config.py  db.py  embeddings.py  errors.py  inbound_media.py  main.py  media_store.py  model_artifacts.py  model_installer.py  models.py  ocr.py  ocr_benchmark.py  preview.py  replies.py  reply_intent.py  retrieval_benchmark.py  scanner.py  search.py  sender.py  setup_wizard.py  shadow_ocr.py  text_embed.py  tg_user.py
scripts/: eval_queries.py  inventory.py  ocr_sample_audit.py  post_reocr_backfill_and_regression.sh  ppocr_worker.py
tests/: test_bot_reply_media.py  test_bot_unload.py  test_db_text_embed.py  test_glm_primary_ocr.py  test_inbound_media.py  test_model_install_ux.py  test_ocr_benchmark.py  test_ocr_fallback.py  test_ocr_model_listing.py  test_ocr_provenance.py  test_reply_ranking.py  test_retrieval_benchmark.py  test_safe_reocr_batches.py  test_search_pagination.py  test_search_realistic_ocr.py  test_search_semantic_ocr.py  test_search_text_branch.py  test_search_thresholds.py  test_setup_wizard.py  test_shadow_ocr.py  test_text_embed.py  test_text_embed_config.py  test_text_embed_orchestration.py
